# rust_scalper_engine

./: .gitignore  Cargo.toml  README.md  memory.txt
context/: decisions.md  indicator-roadmap.md  insights.md  schema.md  state.md  strategy-basis.md  trade_outcome_training_plan.md
crates/binance_spot_candles/: Cargo.toml  LICENSE  README.md
crates/binance_spot_candles/src/: adapters.rs  domain.rs  lib.rs
crates/binance_spot_candles/src/adapters/: traits.rs
crates/binance_spot_candles/src/adapters/binance/: exchange_info.rs  klines_rest.rs
docs/: MACHINE_SCHEMA.md  RUSTYFISH_PIPELINE.md
examples/: engine_http_client.py  indicators_replay_date_range.py  replay_request_file.py  simple_post.py
python_pipeline/: FILE_TREE.md  README.md  __init__.py  baselines.py  compare_checkpoints.py  config.py  data_loader.py  evaluate.py  evaluate_checkpoints.py  export_trade_ledger.py  features.py  fetch_indicators.py  hypothesis_v3.md  metrics.py  normalize_features.py  prepare_rust_features.py  requirements.txt  run_tournament.py  targets.py  train.py  train_profitability.py  train_task_a.py  train_task_b.py  train_v2.py  walk_forward.py
python_pipeline/data/: btc_ohlcv.csv  features_normalized.metadata.json  features_normalized_15m.metadata.json  indicators_full.metadata.json  indicators_full_15m.metadata.json  trade_ledger_macd_trend_15m.summary.json
python_pipeline/features/: __init__.py  build_feature_cache.py
python_pipeline/ingest/: collect_indicators.py  prepare_feature_cache.py
python_pipeline/models/: task_a_v2_lgbm.txt  task_a_v2_schema.json  task_b_v2_lgbm.txt  task_b_v2_schema.json
python_pipeline/models/checkpoints/: EVAL_RESULTS.md  RANKING.md  rank_checkpoints.py
python_pipeline/prompts/: master_profitability_model_prompt.md
python_pipeline/shared/: __init__.py  pipeline_config.py  walk_forward_splits.py
python_pipeline/strategies/: confidence_gate_v1.json  flowgate_1m_v1.json  macd_crossover_profit_gate_15m_v1.json  mean_reversion_vwap_v1.json  regime_switcher_ranging_v1.json  regime_switcher_trending_v1.json  strategy_overview.md  sweep_hunter_v1.json  trend_rider_v1.json  vol_breakout_v1.json  vwap_sniper_v1.json
python_pipeline/training/: build_signal_ledger.py  build_trade_ledger.py  train_profitability_filter.py
python_pipeline/workflows/: run_profitability_workflow.py
src/: adapters.rs  backtest.rs  catalog.rs  config.rs  context.rs  domain.rs  indicators.rs  lib.rs  machine.rs  strategy.rs
src/adapters/: binance.rs
src/adapters/binance/: kline_csv.rs  klines_rest.rs  types.rs
src/catalog/: warmup.rs
src/context/: overlay.rs  policy.rs  rustyfish.rs
src/context/rustyfish/: io.rs  mapper.rs  report.rs
src/historical_data/: mod.rs
src/indicators/: ad_line.rs  adx.rs  aggregate_one_hour.rs  alma.rs  aroon.rs  atr.rs  awesome_oscillator.rs  bollinger.rs  bollinger_bandwidth.rs  bollinger_pct_b.rs  candlestick_patterns.rs  cci.rs  chaikin_oscillator.rs  chandelier_exit.rs  cmf.rs  cmo.rs  dema.rs  donchian.rs  elder_ray.rs  ema.rs  force_index.rs  hist_vol.rs  hull_ma.rs  ichimoku.rs  kama.rs  keltner.rs  kst.rs  kvo.rs  linear_regression.rs  liquidity_sweep.rs  liquidity_void.rs  macd.rs  mama_fama.rs  mass_index.rs  mcginley.rs  mfi.rs  mod.rs  nvi_pvi.rs  obv.rs  order_flow.rs  (+28 more)
src/market_data/: data.rs  mod.rs  prepare.rs  snapshot.rs
src/statistics/: association.rs  descriptive.rs  mod.rs  rank.rs  regression.rs  shape.rs
src/strategies/: bb_mean_reversion.rs  donchian_breakout.rs  ichimoku_trend.rs  macd_trend.rs  mod.rs  rsi_pullback.rs  safety.rs  stoch_crossover.rs  supertrend_adx.rs  ttm_squeeze_fire.rs
src/strategies/default/: engine.rs  mod.rs
src/strategy/: data.rs  decision.rs  engine.rs  prepare.rs  state.rs
src/strategy/engine/: evaluation.rs
src/strategy/formulas/: entry_trigger.rs  mod.rs  position_sizing.rs  price_rounding.rs  volatility.rs
src/strategy/gates/: mod.rs  (+13 more)
tests/: engine_advice.rs  indicators_all.rs  scenario_suite.rs  system_mock_input.rs
tests/fixtures/: btcusd_1m_tiny.csv
tests/scenarios/: README.md
theorystrategy/: 01_anchored_vwap_retest_reclaim.md  02_opening_range_breakout_retest.md  03_volume_profile_lvn_value_area.md  04_linear_regression_channel_bollinger.md  05_divergence_structure_reversal.md
(+73 files in other folders)
