[workspace]
members = [".", "crates/binance_spot_candles"]
resolver = "2"

[package]
name = "binance_BTC"
version = "0.1.0"
edition = "2024"
description = "BTC 15m continuation decision machine and optional HTTP API (workspace root; not published to crates.io)."
readme = "README.md"
repository = "https://github.com/Freesciencenetwork/rust_scalper_engine"
license = "MIT"
publish = false
default-run = "server"

[dependencies]
binance_spot_candles = { path = "crates/binance_spot_candles" }
anyhow = "1.0"
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[bin]]
name = "server"
path = "src/bin/server.rs"
